[package]

name = "curl"
version = "0.2.16"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/carllerche/curl-rust"
description = "Rust bindings to libcurl for making HTTP requests"

[dependencies]
url = "1.2.0"
log = "0.3.0"
libc = "0.2.15"
curl-sys = { path = "curl-sys", version = "0.1.0" }
openssl = "0.7.0"
openssl-sys = "0.7.0"

[dev-dependencies]
env_logger = "0.3.0"

# Unix platforms use OpenSSL for now to provide SSL functionality
# XXX: Just ignore those platforms for now.

[[test]]

name = "test"
path = "test/test.rs"
