[package]
name = "curl-sys"
version = "0.1.32"
authors = ["Carl Lerche <me@carllerche.com"]
links = "curl"
build = "build.rs"
license = "MIT"
repository = "https://github.com/carllerche/curl-rust"
description = "Native bindings to the libcurl library"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3.10"

[lib]
name = "curl_sys"
path = "lib.rs"

[dependencies]
libz-sys = ">= 0"
libc = "0.2"

# Unix platforms use OpenSSL for now to provide SSL functionality
openssl-sys = "=0.7.5"
